update build dependencies